--- a/www/index.html
+++ b/www/index.html
@@ -30,17 +30,49 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+
+    <script src="/js/jquery.jplayer.min.js"></script>	
+    <script src="/js/script.js"></script>
+    <script src="/js/player.js"></script>
+    <script src="/js/slimscroll.js"></script>
+    <script src="/js/jquery.autosize.min.js"></script>	
+    <script src="/js/jquery.cookie.js"></script>
+	<script src="/js/jplayer.playlist.min.js"></script>
+	<script src="/js/nowrequest.js"></script>
+	<script src="/js/popup.js"></script>
+		
+		
+
         <script type="text/javascript">
             app.initialize();
+			
+			       <div class="sidebar">
+            <div class="block widget player">
+                <div id="player-controls" class="player-controls">
+                    <div class="jp-play icon"></div>
+                    <div class="jp-pause icon"></div>
+                </div>
+                <div class="player-controls forbitrates">
+					<div class="bitrates">
+						<span id="live128" class="bitrate"><a href="http://stream.shiza.fm:8000/live.m3u">128</a></span>
+						<span id="live96" class="bitrate"><a href="http://relay.shiza.fm:8000/live96.m3u">96</a></span>
+						<span id="live64" class="bitrate"><a href="http://relay.shiza.fm:8000/live64.m3u">64</a></span>
+					</div>
+				</div>
+				
+			<div class="tool-panel">
+				
+				  <div id="mute" class="icon volume"></div>
+					 <div id="player-controls">
+					  <div class="jp-gui jp-interface">
+					   <div id="volume-bar" class="jp-volume-bar">
+						<div class="jp-volume-bar-value"></div>
+					   </div>
+					  </div>
+					 </div>
+						<div class="icon download-traklist" onclick="$('#shiza-track-list').animate({height: ($('#shiza-track-list').height() < 50) ? '225px' : '45px'}, 600);"></div>
+				  </div>
+            </div>
         </script>
     </body>
 </html>
