--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,4 @@
-<!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
+<!DOCTYPE html
 <html>
     <head>
         <meta charset="utf-8" />
@@ -30,49 +10,6 @@
         <title>Hello World</title>
     </head>
     <body>
-
-    <script src="/js/jquery.jplayer.min.js"></script>	
-    <script src="/js/script.js"></script>
-    <script src="/js/player.js"></script>
-    <script src="/js/slimscroll.js"></script>
-    <script src="/js/jquery.autosize.min.js"></script>	
-    <script src="/js/jquery.cookie.js"></script>
-	<script src="/js/jplayer.playlist.min.js"></script>
-	<script src="/js/nowrequest.js"></script>
-	<script src="/js/popup.js"></script>
-		
-		
-
-        <script type="text/javascript">
-            app.initialize();
-			
-			       <div class="sidebar">
-            <div class="block widget player">
-                <div id="player-controls" class="player-controls">
-                    <div class="jp-play icon"></div>
-                    <div class="jp-pause icon"></div>
-                </div>
-                <div class="player-controls forbitrates">
-					<div class="bitrates">
-						<span id="live128" class="bitrate"><a href="http://stream.shiza.fm:8000/live.m3u">128</a></span>
-						<span id="live96" class="bitrate"><a href="http://relay.shiza.fm:8000/live96.m3u">96</a></span>
-						<span id="live64" class="bitrate"><a href="http://relay.shiza.fm:8000/live64.m3u">64</a></span>
-					</div>
-				</div>
-				
-			<div class="tool-panel">
-				
-				  <div id="mute" class="icon volume"></div>
-					 <div id="player-controls">
-					  <div class="jp-gui jp-interface">
-					   <div id="volume-bar" class="jp-volume-bar">
-						<div class="jp-volume-bar-value"></div>
-					   </div>
-					  </div>
-					 </div>
-						<div class="icon download-traklist" onclick="$('#shiza-track-list').animate({height: ($('#shiza-track-list').height() < 50) ? '225px' : '45px'}, 600);"></div>
-				  </div>
-            </div>
-        </script>
+    <iframe src="http://html5radios.svnlabs.com/tinyradio/index.html?id=1422305723&hash=1422305747" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" width="200" height="200"></iframe>
     </body>
 </html>
