--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-    </head>
-    <body>
-    <iframe src="http://html5radios.svnlabs.com/tinyradio/index.html?id=1422305723&hash=1422305747" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" width="200" height="200"></iframe>
-    </body>
+<html>
+<frameset framespacing="0" frameborder="0" ROWS="*,60">
+    <FRAME SRC="site.html" NAME="Frame1" scrolling=no BORDERCOLOR="#FF00FF" NORESIZE>
+    <FRAME SRC="menu.html" NAME="Frame2" scrolling=no BORDERCOLOR="#FF00FF" NORESIZE>
+</FRAMESET>
+</html>
+</body>
 </html>
