--- a/www/menu.html
+++ b/www/menu.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html
 <html>
     <head>
         <meta charset="utf-8" />
@@ -6,10 +5,9 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
     </head>
     <body><center>
-    <iframe src="http://html5radios.svnlabs.com/tinyradio/index.html?id=1422305723&hash=1422305747" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" ></iframe>,
+    <iframe src="http://html5radios.svnlabs.com/tinyradio/index.html?id=1422305723&hash=1422305747" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" ></iframe>
         </center>
     </body>
 </html>
