--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html
 <html>
 <html>
-<frameset framespacing="0" frameborder="0" ROWS="*,60">
-    <FRAME SRC="site.html" NAME="Frame1" scrolling=no BORDERCOLOR="#FF00FF" NORESIZE>
-    <FRAME SRC="menu.html" NAME="Frame2" scrolling=no BORDERCOLOR="#FF00FF" NORESIZE>
+<frameset framespacing="0" frameborder="0" ROWS="40,*">
+    <FRAME SRC="menu.html" NAME="Frame1" scrolling=no BORDERCOLOR="#FF00FF" NORESIZE>
+    <FRAME SRC="site.html" NAME="Frame2" scrolling=no BORDERCOLOR="#FF00FF" NORESIZE>
 </FRAMESET>
 </html>
 </body>
