--- a/www/site.html
+++ b/www/site.html
@@ -8,11 +8,10 @@
 <style type="text/css">
 
 .Absolute-Center {
-  width: 50%;
-  height: 50%;
-  overflow: 50%;
-  margin: 50%;
-  position: relative;
+  width: 128;
+  height: 128;
+  margin: auto;
+  position: fixed;
   top: 0; left: 0; bottom: 0; right: 0;
 }
 </style>
