--- a/www/site.html
+++ b/www/site.html
@@ -6,6 +6,8 @@
 <script src="js/jquery.jplayer.min.js" type="text/javascript"></script>
 
 <style type="text/css">
+.Banner {
+}
 
 .Absolute-Center {
   width: 128;
@@ -15,7 +17,17 @@
   top: 0; left: 0; bottom: 0; right: 0;
 }
 </style>
-
+<div class="Banner">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- MobileBaner -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:100px"
+     data-ad-client="ca-pub-7955202670236773"
+     data-ad-slot="8164931697"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <div class="Absolute-Center">
 <div id="loaderImage"></div>
 <script type="text/javascript">
